--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+* {
+  padding: 1px;
+  font-size: 14px;
+}
+header {
+  background: #3DC4FC;
+  height: 10vh;
+  width: 100%;
+}
+.home-images {
+  width: 100%;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.beer-list-container {
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.list-image {
+  width: 25%;
+  padding: 2%;
+}
+.list-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.list-details {
+  width: 70%;
+  height: 100%;
+}
+.listStyle {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  height: 20vh;
+  border-bottom: 1px solid grey;
 }
