--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,14 @@ body {
 header {
   background: #3DC4FC;
   height: 10vh;
-  width: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .home-images {
   width: 100%;
-
 }
-
 
 .beer-list-container {
 }
@@ -39,4 +40,23 @@ header {
   height: 22vh;
   border-bottom: 1px solid grey;
   padding: 5% 0 5% 0;
+}
+.fa-home {
+  font-size: 45px;
+  color: white;
+}
+.single-beer {
+  display: flex;
+  flex-direction: column;
+  padding: 5%;
+  
+}
+.single-beer-image {
+  text-align: center;
+  padding: 5%;
+}
+.single-beer-image img {
+  width: 40vw;
+  height: 45vh;
+  object-fit: contain;
 }
